@@ -1,5 +1,7 @@
-\section{Directive Tags Reference}
+\section{The Directives}
 \label{directives}
+
+This section is a reference guide for the various Cheetah \#directive tags.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Comment directives}
