@@ -29,6 +29,7 @@
     \appendix
     \include{glossary}
     \include{examples}
+    \include{comparisons}
     \include{developer}
     %\include{errorMessages}
 \end{document}
