@@ -24,7 +24,14 @@ Please initial your changes and a date for each release
   - fixed a small bug in PlaceholderProcessor.processTag() that prevented
     static caching (i.e. $*) of a value containing ''' style quotes
   - added #break and #continue (TR)
-  - fixed the relative path problem with #include when using Cheetah with WebKit (TR)
+  - fixed the relative path problem with #include when using Cheetah with WebKit
+    (TR)
+  - implemented the #stop directive (TR)
+  - fixed a bug in the macro processing that prevented macros defined inside
+    #includes from being visible at the top level (TR)
+  - fixed a bug in the handling of the setting 'useAutocalling' (TR)
+  - lots of changes in the docs (TR & MO)
+
  
 0.9.7 (July 13, 2001)
   - reimplemented the parsing of $placeholders using the Python tokenizer module (TR)
